--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jalali-moment": "^3.3.11",
     "jalali-react-datepicker": "^1.2.3",
     "jalaliday": "^2.3.0",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
