--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jalaliday": "^2.3.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "moment-jalaali": "^0.10.4",
